Problem description: When typing in a manual font size, such as 10.7, the font rounds off to a multiple of 0.2 or a multiple of 0.5. I can't see a reason why all sizes can't be supported. Steps to reproduce: 1. Open a document 2. Click in the font size box, and type in 10.7 3. Font size is changed to 10.6 Current behavior: Font sizes are rounded to a multiple of 0.2 or 0.5. Expected behavior: Any font size should be acceptable, and possible to use. Operating System: Linux (Other) Version: 4.2.6.2 release
Hello rayhogenson, Thank you for submitting the bug. I can confirm this behaviour in 3.3.0 and master, though i'm not sure if this is something worth fixing as values rounded to the closest .1 are not that different that ones rounded to .2, but i will await others to opinion on this.
Created attachment 106240 [details] 0.1 pt size variant text in a few fonts provided with LOv4312 (In reply to comment #0) > When typing in a manual font size, such as 10.7, the font rounds off to a > multiple of 0.2 or a multiple of 0.5. Under GNU/Linux using v4.3.1.2 I see different behaviour. This is what I see displayed after manually editing the Font Size value in the toolbar: Entered Displayed fo:font-size ------- --------- ------------ 12.0 12 12pt 12.1 12.1 12.1000003814697pt 12.2 12.1 12.1999998092651pt 12.3 12.3 12.3000001907349pt 12.4 12.3 12.3999996185303pt 12.5 12.5 12.5pt 12.6 12.6 12.6000003814697pt 12.7 12.6 12.6999998092651pt 12.8 12.8 12.8000001907349pt 12.9 12.8 12.8999996185303pt 13.0 13 13pt The text, as rendered on screen, does actually change size in each and every case, it is just the display in the toolbar / sidebar that appears to be rounded off (rather than up). This may be a floating point issue.
(In reply to comment #2) > The text, as rendered on screen, does actually change size in each and every > case, it is just the display in the toolbar / sidebar that appears to be > rounded off (rather than up). This may be a floating point issue. If the font size in use is changing, but the displayed size is not, then that's definitely a bug we should address, regardless of whether we decide to round font sizes to a particular tolerance. Removing need*Advice tags from the whiteboard.
Thanks Robinson. Summary amended for clarity.
This bug has been annoying me for years. Note that it only displays incorrectly on the toolbar. If you check your font under format-> character it will show the correct value. It is pretty amazing how long this bug has been affecting OO/LO. In comment #2, I have no idea where he is getting those "fo:font-size" values.
(In reply to crxssi from comment #5) > This bug has been annoying me for years. Note that it only displays > incorrectly on the toolbar. If you check your font under format-> character > it will show the correct value. It is pretty amazing how long this bug has > been affecting OO/LO. Thanks for pointing out this other place. > In comment #2, I have no idea where he is getting those "fo:font-size" > values. These are the values stored in the odt xml file (attachment 106240 [details]).
** Please read this message in its entirety before responding ** To make sure we're focusing on the bugs that affect our users today, LibreOffice QA is asking bug reporters and confirmers to retest open, confirmed bugs which have not been touched for over a year. There have been thousands of bug fixes and commits since anyone checked on this bug report. During that time, it's possible that the bug has been fixed, or the details of the problem have changed. We'd really appreciate your help in getting confirmation that the bug is still present. If you have time, please do the following: Test to see if the bug is still present on a currently supported version of LibreOffice (5.0.4 or later) https://www.libreoffice.org/download/ If the bug is present, please leave a comment that includes the version of LibreOffice and your operating system, and any changes you see in the bug behavior If the bug is NOT present, please set the bug's Status field to RESOLVED-WORKSFORME and leave a short comment that includes your version of LibreOffice and Operating System Please DO NOT: - Update the version field - Reply via email (please reply directly on the bug tracker) - Set the bug's Status field to RESOLVED - FIXED (this status has a particular meaning that is not appropriate in this case) If you want to do more to help you can test to see if your issue is a REGRESSION. To do so: 1. Download and install oldest version of LibreOffice (usually 3.3 unless your bug pertains to a feature added after 3.3) http://downloadarchive.documentfoundation.org/libreoffice/old/ 2. Test your bug 3. Leave a comment with your results. 4a. If the bug was present with 3.3 - set version to "inherited from OOo"; 4b. If the bug was not present in 3.3 - add "regression" to keyword Feel free to come ask questions or to say hello in our QA chat: http://webchat.freenode.net/?channels=libreoffice-qa Thank you for your help! -- The LibreOffice QA Team This NEW Message was generated on: 2016-01-17
** Please read this message in its entirety before responding ** To make sure we're focusing on the bugs that affect our users today, LibreOffice QA is asking bug reporters and confirmers to retest open, confirmed bugs which have not been touched for over a year. There have been thousands of bug fixes and commits since anyone checked on this bug report. During that time, it's possible that the bug has been fixed, or the details of the problem have changed. We'd really appreciate your help in getting confirmation that the bug is still present. If you have time, please do the following: Test to see if the bug is still present on a currently supported version of LibreOffice (5.2.5 or 5.3.0 https://www.libreoffice.org/download/ If the bug is present, please leave a comment that includes the version of LibreOffice and your operating system, and any changes you see in the bug behavior If the bug is NOT present, please set the bug's Status field to RESOLVED-WORKSFORME and leave a short comment that includes your version of LibreOffice and Operating System Please DO NOT Update the version field Reply via email (please reply directly on the bug tracker) Set the bug's Status field to RESOLVED - FIXED (this status has a particular meaning that is not appropriate in this case) If you want to do more to help you can test to see if your issue is a REGRESSION. To do so: 1. Download and install oldest version of LibreOffice (usually 3.3 unless your bug pertains to a feature added after 3.3) http://downloadarchive.documentfoundation.org/libreoffice/old/ 2. Test your bug 3. Leave a comment with your results. 4a. If the bug was present with 3.3 - set version to "inherited from OOo"; 4b. If the bug was not present in 3.3 - add "regression" to keyword Feel free to come ask questions or to say hello in our QA chat: http://webchat.freenode.net/?channels=libreoffice-qa Thank you for helping us make LibreOffice even better for everyone! Warm Regards, QA Team MassPing-UntouchedBug-20170306
I am running libreoffice 5.3.0 on Arch Linux, and the bug is still present with no changes in behavior.
** Please read this message in its entirety before responding ** To make sure we're focusing on the bugs that affect our users today, LibreOffice QA is asking bug reporters and confirmers to retest open, confirmed bugs which have not been touched for over a year. There have been thousands of bug fixes and commits since anyone checked on this bug report. During that time, it's possible that the bug has been fixed, or the details of the problem have changed. We'd really appreciate your help in getting confirmation that the bug is still present. If you have time, please do the following: Test to see if the bug is still present with the latest version of LibreOffice from https://www.libreoffice.org/download/ If the bug is present, please leave a comment that includes the information from Help - About LibreOffice. If the bug is NOT present, please set the bug's Status field to RESOLVED-WORKSFORME and leave a comment that includes the information from Help - About LibreOffice. Please DO NOT Update the version field Reply via email (please reply directly on the bug tracker) Set the bug's Status field to RESOLVED - FIXED (this status has a particular meaning that is not appropriate in this case) If you want to do more to help you can test to see if your issue is a REGRESSION. To do so: 1. Download and install oldest version of LibreOffice (usually 3.3 unless your bug pertains to a feature added after 3.3) from http://downloadarchive.documentfoundation.org/libreoffice/old/ 2. Test your bug 3. Leave a comment with your results. 4a. If the bug was present with 3.3 - set version to 'inherited from OOo'; 4b. If the bug was not present in 3.3 - add 'regression' to keyword Feel free to come ask questions or to say hello in our QA chat: https://kiwiirc.com/nextclient/irc.freenode.net/#libreoffice-qa Thank you for helping us make LibreOffice even better for everyone! Warm Regards, QA Team MassPing-UntouchedBug
The bug is still present. Info from Help - About Libreoffice: Version: 6.0.2.1.0+ Build ID: Gentoo official package CPU threads: 4; OS: Linux 4.9; UI render: default; VCL: x11; Locale: en-US (en_US.utf8); Calc: group
Dear rayhogenson, To make sure we're focusing on the bugs that affect our users today, LibreOffice QA is asking bug reporters and confirmers to retest open, confirmed bugs which have not been touched for over a year. There have been thousands of bug fixes and commits since anyone checked on this bug report. During that time, it's possible that the bug has been fixed, or the details of the problem have changed. We'd really appreciate your help in getting confirmation that the bug is still present. If you have time, please do the following: Test to see if the bug is still present with the latest version of LibreOffice from https://www.libreoffice.org/download/ If the bug is present, please leave a comment that includes the information from Help - About LibreOffice. If the bug is NOT present, please set the bug's Status field to RESOLVED-WORKSFORME and leave a comment that includes the information from Help - About LibreOffice. Please DO NOT Update the version field Reply via email (please reply directly on the bug tracker) Set the bug's Status field to RESOLVED - FIXED (this status has a particular meaning that is not appropriate in this case) If you want to do more to help you can test to see if your issue is a REGRESSION. To do so: 1. Download and install oldest version of LibreOffice (usually 3.3 unless your bug pertains to a feature added after 3.3) from http://downloadarchive.documentfoundation.org/libreoffice/old/ 2. Test your bug 3. Leave a comment with your results. 4a. If the bug was present with 3.3 - set version to 'inherited from OOo'; 4b. If the bug was not present in 3.3 - add 'regression' to keyword Feel free to come ask questions or to say hello in our QA chat: https://kiwiirc.com/nextclient/irc.freenode.net/#libreoffice-qa Thank you for helping us make LibreOffice even better for everyone! Warm Regards, QA Team MassPing-UntouchedBug
repro Version: 7.0.0.0.beta2 (x64) Build ID: 1c213561a365b5666167321de68c9977500c9612 CPU threads: 4; OS: Windows 6.1 Service Pack 1 Build 7601; UI render: default; VCL: win Locale: en-US (de_DE); UI: en-US Calc: threaded
Andreas Heinisch committed a patch related to this issue. It has been pushed to "master": https://git.libreoffice.org/core/commit/cab77a48da1d481ddae24c9bd273ba4e7585b81c tdf#83090 - Allow any font size in the toolbar/sidebar It will be available in 7.3.0. The patch should be included in the daily builds available at https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: https://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.