tdf#83090 - Allow any font size in the toolbar/sidebar

In order to allow any font size in the toolbar/sidebar, correctly round
the height of the font in the status listener.

Change-Id: Iebd07f5e710a01c5a9be4a7dd8c950d191d5d629
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/122332
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>